overlapping not fixed

--- a/views/style/user.css
+++ b/views/style/user.css
@@ -34,23 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 30px; 
-  }
-
-  div.bottom > .Left, div.bottom > .msgCon {
-    flex-grow: 1;
-    overflow: visible; 
-  }
-
-  div.bottom > .Left, div.bottom > .msgCon {
-    min-height: auto; 
-    flex-grow: 1; 
-  }
-
-  .bottom, .Left, .msgCon {
-    float: none;
-    position: relative; 
-    clear: both;
+    margin-bottom: 20px; 
   }
 }
 
